# OmniAgent

backend/: docker-compose.yml
backend/agent-core/: Dockerfile  app.py  main.py  pyproject.toml
backend/agent-core/db/qdrant/: connectDB.py  qdrant_client.py
backend/agent-core/db/supabase/: connectDB.py
backend/agent-core/db/supabase/auth/: auth.py  route.py
backend/agent-core/db/supabase/crud/: WhatshappAccount_crud.py  __init__.py  userSource_crud.py
backend/agent-core/db/supabase/models/: model.py  whatshappAccount.py
backend/agent-core/knowledge_based/pdf/embedding/: embedding.py
backend/agent-core/knowledge_based/pdf/router/: router.py
backend/agent-core/knowledge_based/website/crawl/: crawl.py
backend/agent-core/knowledge_based/website/embedding/: embed.py
backend/agent-core/knowledge_based/website/routes/: route.py
backend/agent-core/rpc/: server.py
backend/gateways/: Dockerfile  main.js  nodemon.json  package-lock.json  package.json
backend/gateways/whatshapp/grpc/: client.js
backend/gateways/whatshapp/routes/: route.js
backend/gateways/whatshapp/service/: historySync.js  message.js  socket.js
backend/proto/: omniagent.proto
