[project]
name = "agent-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.5",
    "pydantic>=2.12.5",
    "selenium>=4.40.0",
    "sentence-transformers>=5.2.2",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that need browser/network (run with -m integration)",
]
testpaths = ["tests"]
